--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -207,7 +207,7 @@
                                                         </div>
                                                         <div class="col-xs-5">
                                                             <div class="huge"></div>
-                                                            <div class="lead">電風扇</div>
+                                                            <div class="lead">烤箱</div>
                                                         </div>
                                                         <div class="col-xs-3">
                                                             <i class="fa fa-lightbulb-o fa-3x pull-left"> </i>
@@ -241,17 +241,150 @@
                                 <div class="tab-pane fade" id="profile-pills">
                                     <h4>電視控制</h4>
                                     <div class="row ">
-                                        <div class="col-md-6">
-                                            <a class="btn btn-large btn-default " id="btnTVON">
-                                                <i class="fa fa-power-off fa-3x pull-left"></i>開關</a>
-                                            <a class="btn btn-large btn-default" id="btnTVMute">
-                                                <i class="fa fa-microphone-slash fa-3x pull-left"></i>靜音</a>
-                                            <a class="btn btn-large btn-default" id="btnTVUP">
-                                                <i class="fa fa-chevron-circle-left fa-3x pull-left"></i>向上轉台</a>
+                                        <div class="col-lg-3 col-md-6">
+                                            <div class="panel panel-default panel-outline">
+                                                <div class="panel-heading">
+                                                    <div class="row">
+                                                        <div class="col-xs-4">
+                                                            <input checked data-toggle="toggle" type="checkbox" id="NodeN1Switch">
+                                                        </div>
+                                                        <div class="col-xs-5">
+                                                            <div class="huge"></div>
+                                                            <div class="lead">開關</div>
+                                                        </div>
+                                                        <div class="col-xs-3">
+                                                            <i class="fa fa-power-off fa-3x pull-left"> </i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <div class="col-md-6">
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa  fa-chevron-circle-right fa-3x pull-left"></i>向下轉台</a>
+                                        <div class="col-lg-3 col-md-6">
+                                            <div class="panel panel-default panel-outline">
+                                                <div class="panel-heading">
+                                                    <div class="row">
+                                                        <div class="col-xs-4">
+                                                            <input checked data-toggle="toggle" type="checkbox" id="NodeN1Switch">
+                                                        </div>
+                                                        <div class="col-xs-5">
+                                                            <div class="huge"></div>
+                                                            <div class="lead">靜音</div>
+                                                        </div>
+                                                        <div class="col-xs-3">
+                                                            <i class="fa fa-microphone-slash fa-3x pull-left"> </i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 col-md-6">
+                                            <div class="panel panel-default panel-outline">
+                                                <div class="panel-heading">
+                                                    <div class="row">
+                                                        <div class="col-xs-4">
+                                                            <input checked data-toggle="toggle" type="checkbox" id="NodeN1Switch">
+                                                        </div>
+                                                        <div class="col-xs-5">
+                                                            <div class="huge"></div>
+                                                            <div class="lead">向上轉台</div>
+                                                        </div>
+                                                        <div class="col-xs-3">
+                                                            <i class="fa fa-chevron-circle-left fa-3x pull-left"> </i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 col-md-6">
+                                            <div class="panel panel-default panel-outline">
+                                                <div class="panel-heading">
+                                                    <div class="row">
+                                                        <div class="col-xs-4">
+                                                            <input checked data-toggle="toggle" type="checkbox" id="NodeN1Switch">
+                                                        </div>
+                                                        <div class="col-xs-5">
+                                                            <div class="huge"></div>
+                                                            <div class="lead">向下轉台</div>
+                                                        </div>
+                                                        <div class="col-xs-3">
+                                                            <i class="fa  fa-chevron-circle-right fa-3x pull-left"> </i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                         <div class="col-lg-3 col-md-6">
+                                            <div class="panel panel-default panel-outline">
+                                                <div class="panel-heading">
+                                                    <div class="row">
+                                                        <div class="col-xs-4">
+                                                            <input checked data-toggle="toggle" type="checkbox" id="NodeN1Switch">
+                                                        </div>
+                                                        <div class="col-xs-5">
+                                                            <div class="huge"></div>
+                                                            <div class="lead">增加音量</div>
+                                                        </div>
+                                                        <div class="col-xs-3">
+                                                            <i class="fa fa-volume-up fa-3x pull-left"> </i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 col-md-6">
+                                            <div class="panel panel-default panel-outline">
+                                                <div class="panel-heading">
+                                                    <div class="row">
+                                                        <div class="col-xs-4">
+                                                            <input checked data-toggle="toggle" type="checkbox" id="NodeN1Switch">
+                                                        </div>
+                                                        <div class="col-xs-5">
+                                                            <div class="huge"></div>
+                                                            <div class="lead">減低音量</div>
+                                                        </div>
+                                                        <div class="col-xs-3">
+                                                            <i class="fa fa-volume-down fa-3x pull-left"> </i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 col-md-6">
+                                            <div class="panel panel-default panel-outline">
+                                                <div class="panel-heading">
+                                                    <div class="row">
+                                                        <div class="col-xs-4">
+                                                            <input checked data-toggle="toggle" type="checkbox" id="NodeN1Switch">
+                                                        </div>
+                                                        <div class="col-xs-5">
+                                                            <div class="huge"></div>
+                                                            <div class="lead">暫停</div>
+                                                        </div>
+                                                        <div class="col-xs-3">
+                                                            <i class="fa fa-pause fa-3x pull-left"> </i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-3 col-md-6">
+                                            <div class="panel panel-default panel-outline">
+                                                <div class="panel-heading">
+                                                    <div class="row">
+                                                        <div class="col-xs-4">
+                                                            <input checked data-toggle="toggle" type="checkbox" id="NodeN1Switch">
+                                                        </div>
+                                                        <div class="col-xs-5">
+                                                            <div class="huge"></div>
+                                                            <div class="lead">快轉</div>
+                                                        </div>
+                                                        <div class="col-xs-3">
+                                                            <i class="fa fa-forward fa-3x pull-left"> </i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                             <a class="btn btn-large btn-default " href="#">
                                                 <i class="fa fa-volume-up  fa-3x pull-left"></i>增加音量</a>
                                             <a class="btn btn-large btn-default" href="#">
