--- a/pages/roomLiving.html
+++ b/pages/roomLiving.html
@@ -305,10 +305,16 @@
                                             <tr class="even gradeC">
                                                 <!--    <td>1</td>
                                                         <td>P</td> -->
-                                                <td>開關</td>
+                                                <td>主控盤</td>
                                                 <td>
                                                     <a class="btn btn-large btn-default " id="btnTVON">
                                                         <i class="fa fa-power-off fa-3x pull-left"></i>開關</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-home fa-3x pull-left"></i>主選單</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-reply fa-3x pull-left"></i>跳出</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-stop fa-3x pull-left"></i>靜止</a>
                                                 </td>
                                             </tr>
                                             <tr class="even gradeC">
@@ -324,6 +330,8 @@
                                                         <i class="fa fa-volume-up  fa-3x pull-left"></i>增加音量</a>
                                                     <a class="btn btn-large btn-default" href="#">
                                                         <i class="fa fa-volume-down fa-3x pull-left"></i>減低音量</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa fa-microphone-slash fa-3x pull-left"></i>靜音</a>
                                                 </td>
                                             </tr>
                                             <tr class="even gradeC">
@@ -365,65 +373,81 @@
                                                     </div>
                                                 </td>
                                             </tr>
+                                            <tr class="even gradeC">
+                                                <!--    <td>1</td>
+                                                        <td>P</td> -->
+                                                <td>速度控制</td>
+                                                <td>
+                                                    <a class="btn btn-large btn-default" id="btnTVUP">
+                                                        <i class="fa  fa-fast-backward fa-3x pull-left"></i>兩倍倒帶</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa fa-backward fa-3x pull-left">
+                                                            
+                                                        </i>倒帶</a>
+                                                    <a class="btn btn-large btn-default " href="#">
+                                                        <i class="fa fa-pause fa-3x pull-left"></i>暫停</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa fa-play fa-3x pull-left"></i>播放</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa fa-forward fa-3x pull-left"></i>快轉</a>
+                                                    <a class="btn btn-large btn-default" href="#">
+                                                        <i class="fa fa-fast-forward fa-3x pull-left"></i>兩倍快轉</a>
+                                                </td>
+                                            </tr>
                                         </tbody>
                                     </table>
-                                    <div class="row ">
-                                        <div class="col-md-6">
-                                            <a class="btn btn-large btn-default" id="btnTVMute">
-                                                <i class="fa fa-microphone-slash fa-3x pull-left"></i>靜音</a>
-                                            <a class="btn btn-large btn-default" id="btnTVUP">
-                                                <i class="fa fa-chevron-circle-left fa-3x pull-left"></i>向上轉台</a>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa  fa-chevron-circle-right fa-3x pull-left"></i>向下轉台</a>
-                                            <a class="btn btn-large btn-default " href="#">
-                                                <i class="fa fa-volume-up  fa-3x pull-left"></i>增加音量</a>
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-volume-down fa-3x pull-left"></i>減低音量</a>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-pause fa-3x pull-left"></i>暫停</a>
-                                        </div>
-                                    </div>
-                                    <p></p>
-                                    <p></p>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-forward fa-3x pull-left"></i>快轉</a>
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-fast-forward fa-3x pull-left"></i>兩倍快轉</a>
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-backward fa-3x pull-left"></i>倒帶</a>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa  fa-fast-backward fa-3x pull-left"></i>兩倍倒帶</a>
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-play fa-3x pull-left"></i>播放</a>
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-stop fa-3x pull-left"></i>靜止</a>
-                                        </div>
-                                    </div>
-                                    <p></p>
-                                    <p></p>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-home fa-3x pull-left"></i>主選單</a>
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-check fa-3x pull-left"></i>確認</a>
-                                            <a class="btn btn-large btn-default" href="#">
-                                                <i class="fa fa-reply fa-3x pull-left"></i>跳出</a>
-                                        </div>
-                                    </div>
-                                
                                 </div>
                                 <div class="tab-pane fade" id="messages-pills">
                                     <h4>冷氣控制</h4>
-                                    <div class="row">
+                                    <table class="table table-striped table-bordered table-hover" id="tableLivingControl">
+                                        <thead>
+                                            <tr>
+                                                <!--   <th>ID</th>
+                                                        <th>類型</th> -->
+                                                <th>應用</th>
+                                                <th>控制</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="even gradeC">
+                                                <!--    <td>1</td>
+                                                        <td>P</td> -->
+                                                <td>主控</td>
+                                                <td>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-power-off fa-3x pull-left"></i>開關</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-soundcloud fa-3x pull-left"></i>送風</a>
+                                                    <a class="btn btn-large btn-default " id="btnTVON">
+                                                        <i class="fa fa-twitter  fa-3x pull-left"></i> 除濕</a>
+                                                </td>
+                                                <tr class="even gradeC">
+                                                    <!--    <td>1</td>
+                                                        <td>P</td> -->
+                                                    <td>定溫</td>
+                                                    <td>
+                                                        <a class="btn btn-large btn-default " id="btnTVON">
+                                                            <i class="fa  fa-chevron-up fa-3x pull-left"></i>溫度增加</a>
+                                                        <a class="btn btn-large btn-default " id="btnTVON">
+                                                            <i class="fa  fa-chevron-down fa-3x pull-left"></i>溫度減少</a>
+                                                    </td>
+                                                    <tr class="even gradeC">
+                                                        <!--    <td>1</td>
+                                                        <td>P</td> -->
+                                                        <td>定時</td>
+                                                        <td>
+                                                            <a class="btn btn-large btn-default " id="btnTVON">
+                                                                <i class="fa fa-caret-up fa-3x pull-left"></i>時間增加</a>
+                                                            <a class="btn btn-large btn-default " id="btnTVON">
+                                                                <i class="fa fa-caret-down fa-3x pull-left"></i>時間減少</a>
+                                                        </td>
+                                                    </tr>
+                                                </tr>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!--     <div class="row">
                                         <div class="col-md-6">
                                             <a class="btn btn-large btn-default" href="#">
                                                 <i class="fa fa-power-off fa-3x pull-left"></i>開關 </a>
@@ -440,7 +464,7 @@
                                             <a class="btn btn-large btn-default" href="#">
                                                 <i class="fa fa-caret-down fa-3x pull-left"></i>時間減少</a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="tab-pane fade" id="settings-pills">
                                     <h4>設定介面</h4>
