--- a/pages/index.html
+++ b/pages/index.html
@@ -286,7 +286,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-info">
+                    <div class="panel panel-info" id="btnEnvProtect">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
@@ -298,7 +298,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a id="btnEnvProtect">
+                        <a >
                             <div class="panel-footer">
                                 <span class="pull-left">開啟</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -308,7 +308,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-red">
+                    <div class="panel panel-red" id="btnEnvSleep">
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
@@ -320,7 +320,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a id="btnEnvSleep">
+                        <a >
                             <div class="panel-footer">
                                 <span class="pull-left">開啟</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
