--- a/pages/roomMainRoom.html
+++ b/pages/roomMainRoom.html
@@ -87,7 +87,7 @@
                         </li>
                         <li>
                         </li>
-                   <!--      <li>
+                        <!--      <li>
                             <a href="roomSetting.html"><i class="fa fa-cog fa-fw"></i> 系統設定</a>
                         </li> -->
                     </ul>
@@ -111,7 +111,6 @@
                             </picture>
                         </div>
                     </div>
-          
                 </div>
                 <div class="row">
                     <div class="panel panel-info">
@@ -137,7 +136,7 @@
                                     <h4>電器控制</h4>
                                     <div class="row">
                                         <div class="col-md-12">
-                                          <!--   <label class="checkbox">
+                                            <!--   <label class="checkbox">
                                                 <input checked data-toggle="toggle" type="checkbox" data-onstyle="success" id="btnTimer"> timer</label> -->
                                             <table class="table table-striped table-bordered table-hover" id="tableLivingControl">
                                                 <thead>
@@ -221,6 +220,27 @@
                                 </div>
                                 <div class="tab-pane fade" id="profile-pills">
                                     <h4>電視控制</h4>
+                                    <label class="checkbox">正常模式 OFF
+                                        <input data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnIRTVRecord"> 對碼模式 ON</label>
+                                    <!-- 對碼模式 Modal -->
+                                    <div class="modal fade" id="IRRecordModal" role="dialog">
+                                        <div class="modal-dialog">
+                                            <!-- Modal content-->
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                    <h4 class="modal-title">對碼模式開啟</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p>請點擊遙控器，進行紅外線對碼
+                                                        <br>等待3秒，確認是否測試成功</p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <table class="table table-striped table-bordered table-hover" id="tableLivingControl">
                                         <thead>
                                             <tr>
@@ -345,6 +365,8 @@
                                 </div>
                                 <div class="tab-pane fade" id="messages-pills">
                                     <h4>冷氣控制</h4>
+                                    <label class="checkbox">正常模式 OFF
+                                        <input data-toggle="toggle" type="checkbox" data-onstyle="danger" id="btnIRTVRecord"> 對碼模式 ON</label>
                                     <table class="table table-striped table-bordered table-hover" id="tableLivingControl">
                                         <thead>
                                             <tr>
@@ -421,7 +443,6 @@
                         <!-- /.panel-body -->
                     </div>
                 </div>
-
             </div>
         </div>
         <!-- /#page-wrapper -->
@@ -437,7 +458,6 @@
     <script src="../bower_components/raphael/raphael-min.js"></script>
     <script src="../bower_components/morrisjs/morris.min.js"></script>
     <script src="../js/RestControlMainRoom.js"></script>
-
     <!-- toggle button -->
     <script src="../bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
 </body>
