--- a/pages/roomMainRoom.html
+++ b/pages/roomMainRoom.html
@@ -102,20 +102,19 @@
                     <div class="col-lg-12">
                         <div class="page-header">
                             <h1>主臥房! <small>玩轉家電</small></h1>
-                            <picture>
+                            <!-- <picture>
                                 <source srcset="picture/smallRoom1.jpg" media="(max-width: 40em) and (orientation: landscape)">
                                 <source srcset="picture/smallRoom1.jpg" media="(max-width: 40em) and (orientation: portrait)">
                                 <source srcset="picture/Room1.jpg" media="(min-width: 40em) and (orientation: landscape)">
                                 <source srcset="picture/Room1.jpg" media="(min-width: 40em) and (orientation: portrait)">
                                 <img srcset="picture/Room1.jpg" alt="My default image">
-                            </picture>
+                            </picture> -->
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="panel panel-info">
-                        <div class="panel-heading"><i class="fa fa-tachometer">
-                        </i>  控制面板
+                        <div class="panel-heading"><i class="fa fa-tachometer"></i> 控制面板
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
