--- a/pages/roomCurrentStat.html
+++ b/pages/roomCurrentStat.html
@@ -203,6 +203,7 @@
             </div>
             <!-- /#page-wrapper -->
         </div>
+     </div>    
         <!-- /#wrapper -->
         <!-- jQuery -->
         <script src="../bower_components/jquery/dist/jquery.min.js"></script>
