--- a/pages/roomCurrentStat.html
+++ b/pages/roomCurrentStat.html
@@ -126,7 +126,7 @@
                                             <th>應用</th>
                                             <th>位置</th>
                                             <th>狀態</th>
-                                            <th>預估電費NTD(本日)</th>
+                                            <th>即時耗電(A)</th>
                                         </tr>
                                     </thead>
                                     <tbody>
